--- a/ui/narrative/methods/view_growth_curves/display.yaml
+++ b/ui/narrative/methods/view_growth_curves/display.yaml
@@ -10,6 +10,8 @@ tooltip  : |
 screenshots :
     []
 
+icon: kb-teal.png
+
 #
 # Define the set of other narrative methods that should be suggested to the user.
 #
