changed name back to param0 because nothing ever works on my first try

--- a/ui/narrative/methods/view_differential_expression_matrix_set/display.yaml
+++ b/ui/narrative/methods/view_differential_expression_matrix_set/display.yaml
@@ -29,7 +29,7 @@ suggestions :
 # Configure the display and description of the parameters
 #
 parameters :
-    objName :
+    param0 :
         ui-name : |
             Set
         short-hint : |
