--- a/kbase.yml
+++ b/kbase.yml
@@ -8,8 +8,8 @@ service-language:
     python
 
 module-version:
-    1.0.3
+    1.0.4
 
 owners:
-    [msneddon, wjriehl, rsutormin, kkeller, scanon]
+    [wjriehl, kkeller, scanon]
 
