--- a/ui/narrative/methods/view_sample_property_barchart/display.yaml
+++ b/ui/narrative/methods/view_sample_property_barchart/display.yaml
@@ -64,3 +64,9 @@ description : |
 
 technical-description : |
     View bar chart of all property values for a selected set of samples from SamplePropertyMatrix.
+
+publications :
+    -
+        display-text: |
+            Arkin AP, Cottingham RW, Henry CS, Harris NL, Stevens RL, Maslov S, et al. KBase: The United States Department of Energy Systems Biology Knowledgebase. Nature Biotechnology. 2018;36: 566. doi: 10.1038/nbt.4163
+        link: https://www.nature.com/articles/nbt.4163
