removed the extra <p>

--- a/ui/narrative/methods/view_expression_interactive_heatmap/display.yaml
+++ b/ui/narrative/methods/view_expression_interactive_heatmap/display.yaml
@@ -40,7 +40,7 @@ parameters :
 
 
 description : |
-  <p><p>This is a visualization App to view and explore an ExpressionMatrix as a heatmap. Features are displayed as rows, and the conditions as columns. Mouse over the heatmap cells to view the expression value for a given feature and a condition.</p>
+  <p>This is a visualization App to view and explore an ExpressionMatrix as a heatmap. Features are displayed as rows, and the conditions as columns. Mouse over the heatmap cells to view the expression value for a given feature and a condition.</p>
 
   <p>The colors in the heatmap range from white (minimum expression) to red (maximum expression) as depicted in the vertical color scale located to the right of the heatmap.</p>
 
