--- a/.travis.yml
+++ b/.travis.yml
@@ -15,16 +15,16 @@ before_install:
   - docker version
 
 install:
-  - pushd ..
-  - git clone https://github.com/kbase/jars
-  - git clone https://github.com/kbase/kb_sdk
-  - cd kb_sdk
-  - make bin
-  - make sdkbase
-  - export PATH=$(pwd)/bin:$PATH
-  - source src/sh/sdk-completion.sh
-  - popd
-
+  - docker pull kbase/kb-sdk
+  - docker run kbase/kb-sdk genscript > $HOME/bin/kb-sdk
+  - chmod 755 $HOME/bin/kb-sdk
+  - export PATH=$PATH:$HOME/bin/kb-sdk
+  - kb-sdk sdkbase
+  - kb-sdk test || true
+  - make build-test-script
+  - sed -i "s/test_token=/test_token=$TEST_TOKEN/" test_local/test.cfg
+  - sed -i "s/appdev./ci./" test_local/test.cfg
+ 
 script:
   - kb-sdk validate
 
