corrections made according to Bill's review comments

--- a/ui/narrative/methods/view_proteinstructures/display.yaml
+++ b/ui/narrative/methods/view_proteinstructures/display.yaml
@@ -30,7 +30,7 @@ suggestions :
 # Configure the display and description of the parameters
 #
 parameters :
-    param0 :
+    proteinstructures :
         ui-name : |
             ProteinStructures
         short-hint : |
